--- a/configclient.properties
+++ b/configclient.properties
@@ -1,7 +1,7 @@
 server.port=8990
 spring.application.name=CONFIG-CLIENT
 #consul server服务注册地址
-spring.cloud.consul.host=localhost
-spring.cloud.consul.port=8500
+#spring.cloud.consul.host=localhost
+#spring.cloud.consul.port=8500
 #指定环境配置
 spring.profiles.active=dev
